LMS.App/ClientApp/src/styles.css
/* ... */
.edit-school-modal .modal-content {
  background: #ffffff;
  border: 1px solid #f1f7ff;
  box-shadow: 0px 4px 20px rgb(0 0 0 / 5%);
  border-radius: 16px;
}

.edit-school-modal .modal-header {
  padding: 30px 20px 15px;
}

.modal-header .btn-close {
  position: absolute;
  background: none;
  top: 60%;
  right: 35px;
  padding: 0;
  opacity: 1;
  transform: translateY(-50%);
}

.modal-school-icon {
  border: 2px solid #dee0e3;
  width: 200px;
  height: 200px;
  margin: 0 auto;
  background: #7c8da7;
}

.text-line-border:before {
  content: "";
  width: 100%;
  height: 1px;
  background: #f5f5f5;
  position: absolute;
  left: 0;
  top: 56%;
  transform: translateY(-50%);
}

.line-text {
  background-color: #fff;
  display: inline-block;
  position: relative;
  z-index: 999;
  padding: 0 5px;
}

textarea.ht_96 {
  height: 96px;
}

.resize-none {
  resize: none;
}

.hover-tags .custom-tag:hover {
  background: #7c8da7;
  color: #fafafa;
  padding-right: 25px;
  cursor: pointer;
}

.hover-tags .custom-tag .delete-tag {
  display: nonw;
}

.hover-tags .custom-tag:hover .delete-tag {
  display: block;
  top: 3px;
  right: 7px;
}

.owner-input select {
  padding-left: 84px;
}

.edit-school-modal .modal-body,
.edit-school-modal .modal-header,
.edit-school-modal .modal-footer {
  padding-left: 32px;
  padding-right: 32px;
}

.grid-active,
.list-active {
  display: block !important;
}

.cost_theme {
  color: #ff821c;
  margin-right: 8px;
}

.payment-profile {
  padding: 4px 16px;
  background: #fafafa;
  border-radius: 16px;
}

.classes-grid {
  border-radius: 4px;
}

.classes-grid .school-large-thumbnail {
  height: 28vh !important;
}

.classes-grid .school-grid-footer.above-thumbnail {
  position: absolute;
  bottom: 0px;
  z-index: 9;
}

.classes-grid .function-btns {
  padding: 16px 23px;
}

.start-date {
  color: #ff1c1c;
}

.language-tag .custom-tag {
  border: 1px solid #fafafa;
}

.School-prof-header .user-profile-header {
  width: 102px;
  height: 102px;
  min-width: 102px;
}

.minw-142 {
  min-width: 142px;
}

.School-prof-header .class-course-image {
  width: 150px;
  height: 150px;
  min-width: 150px;
}

.univ-logo {
  position: absolute;
  right: 54px;
  top: 0;
  width: 31px;
  height: 31px;
  display: flex;
  justify-content: center;
  border-radius: 50%;
  overflow: hidden;
}
.class_request {
  max-width: 750px;
}

.sepearator {
  color: #f5f5f5;
  margin: 0 24px;
}

.button-stroage {
  padding: 8px 24px;
  background: rgba(124, 141, 167, 0.05) !important;
  border-radius: 32px;
}

.schoolgrid-header .live-soon {
  margin: 0 46px;
}

.class-icon-profile {
  width: 150px;
  height: 150px;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

.latest-form label {
  margin-left: 10px;
  color: #464e5f;
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
  margin-bottom: 4.5px;
}

.latest-form .form-group {
  margin-bottom: 10px;
}

.post-attch-btn {
  width: 40px;
  height: 40px;
  min-width: 40px;
  border: 1px solid #fafafa;
  background: #fff;
  color: #7c8da7;
  transition: 0.3s all;
  margin-right: 16px;
  font-size: 12px;
  cursor: pointer;
}

.post-attch-btn svg {
  width: 20px;
  height: 20px;
  flex: 0 0 auto;
}

.post-attch-btn input {
  width: 0;
  margin: 0;
}

.media-sourcebtn button img {
  display: block;
}

.post-attch-btn .light-attach {
  display: none;
}

body .liv-postbtn .post-attch-btn {
  margin-right: 0;
}

body .liv-postbtn .post-attch-btn:hover,
body .liv-postbtn .post-attch-btn.active,
.post-attch-btn.active,
.post-attch-btn:hover {
  background: #ff7e1c;
  color: #fff !important;
}

.post-attch-btn:hover .light-attach,
.post-attch-btn.active .light-attach {
  display: block;
}

.post-attch-btn:hover .dark-attach,
.post-attch-btn.active .dark-attach {
  display: none;
}

.post-bot-right .lg_btn {
  max-width: 302px;
  position: relative;
  width: 250px !important;
}

@media screen and (max-width: 767px) {
  .post-bot-right .lg_btn {
    max-width: 100%;
  }
}

.post-bot-right .delay-btn {
  width: 60px !important;
  background: #fff0e5;
  color: #ff801c !important;
  font-size: 20px;
  position: relative;
  right: 0;
  z-index: 0;
  border-radius: 8px 0px 0px 8px;
  margin-right: -6px;
}
.liv-postbtn .post-attch-btn {
  padding: 8px 10px;
  width: auto;
  border-radius: 32px;
  color: #7c8da7;
}

.dl-post-img {
  background: rgba(159, 159, 159, 0.6) !important;
  width: 25px;
  height: 25px;
  min-width: 25px;
  color: #fff !important;
  font-size: 13px;
  right: 12px;
  top: 12px;
}

.dl-school-img {
  background: rgba(159, 159, 159, 0.6) !important;
  width: 25px;
  height: 10px;
  min-width: 25px;
  color: #fff !important;
  font-size: 13px;
  right: 5px;
  top: 5px;
}

.hashtag_post .custom-tag {
  border: 1px solid #fafafa;
  background: #fff;
}

.liv-postbtn .post-attch-btn img {
  margin-right: 9px;
}

.liv-postbtn {
  position: absolute;
  left: 32px;
}

.web-cmbtn {
  width: 100%;
  border: 1px solid #fafafa;
  border-radius: 8px;
  height: 82px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.web-cmbtn:hover {
  border: 1px solid #fafafa;
}

.live-chat-outer {
  padding: 2px 10px 30px 0px;
  max-height: 550px;
  overflow: auto;
  margin-right: -10px;
}

.live-chat-outer .live-message:last-child {
  margin-bottom: 0;
}

.full-widthreel {
  background-image: url(../src/assets/images/reel-bg.png);
  background-repeat: no-repeat;
  background-size: cover;
  padding: 0px;
}

.full-widthreel .live-inner {
  background: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(25px);
  padding: 0px 16px;
}

.full-widthreel .live-image {
  max-width: 860px;
}

.live-inner {
  padding: 0 16px;
}

.live-inner iframe {
  width: 100%;
}

.live-image {
  width: 100%;
  margin: 0 auto;
}
/* ... */

